--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 
 .flex-container {
     display: flex;
+    background-color: #fff;
 }
 .box {
     height: 100px;
@@ -23,12 +24,15 @@ body {
 
 .one {
     background-color: red;
+    flex-grow: 2;
 }
 
 .two {
     background-color: blue;
+    flex-grow: 3;
 }
 
 .three {
     background-color: green;
+    flex-grow: 1;
 }
