--- a/style.css
+++ b/style.css
@@ -19,20 +19,19 @@ body {
 }
 .box {
     height: 100px;
-    width: 320px;
+    min-width: 200px;
+    flex-grow: 1;
+    flex-wrap: wrap;
 }
 
 .one {
     background-color: red;
-    flex-shrink: 1;
 }
 
 .two {
     background-color: blue;
-    flex-shrink: 2;
 }
 
 .three {
     background-color: green;
-    flex-shrink: 3;
 }
