--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ body {
 .flex-container {
     display: flex;
     background-color: #fff;
+    flex-flow: row;
 }
 .box {
     height: 100px;
-    min-width: 500px;
+    flex-basis: 0 0 100px;
     flex-wrap: wrap;
     flex-grow: 1;
 }
